Fix bug caused by text overflow

--- a/src/main/resources/static/css/employees.css
+++ b/src/main/resources/static/css/employees.css
@@ -40,7 +40,7 @@ button:hover {
 .main {
     flex: 1;
     align-self: center;
-    width: min(800px, 90%);
+    width: min(600px, 90%);
 
     display: flex;
     flex-direction: column;
@@ -97,6 +97,8 @@ input[type=text] {
 
 .employee-name {
     font-size: 16px;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .button {
