--- a/src/main/resources/static/css/secret-santa.css
+++ b/src/main/resources/static/css/secret-santa.css
@@ -44,18 +44,20 @@
     flex: 1 1 0;
     display: flex;
     flex-direction: column;
+
+    overflow: hidden;
 }
 
 .name-container.left {
-    align-items: flex-start;
+    text-align: left;
 }
 
 .name-container.right {
-    align-items: flex-end;
+    text-align: right;
 }
 
 .arrow {
-    flex: 0;
+    flex: 0 0 auto;
 }
 
 .indicator {
@@ -65,6 +67,8 @@
 
 .employee-name {
     font-size: 16px;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .no-pairs-container {
